--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="unstraight">
+<html lang="en" ng-app="eaccounting">
     <head>
         <meta charset="utf-8">
         <title>Eaccounting</title>
