--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,11 @@
 
         <!-- injector:js -->
         <script src="/js/app.js"></script>
+        <script src="/js/forms.js"></script>
+        <script src="/js/sha512.js"></script>
         <script src="/js/controllers/CalcSaleryCtrl.js"></script>
+        <script src="/js/controllers/LoginCtrl.js"></script>
+        <script src="/js/factories/LoginFactory.js"></script>
         <!-- endinjector -->
 
     </head>
