--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="eaccounting">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Eaccounting</title>
 
         <!-- Font awesome -->
