--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,12 @@
         <script src="/js/app.js"></script>
         <script src="/js/forms.js"></script>
         <script src="/js/sha512.js"></script>
+        <script src="/js/controllers/ApartementCtrl.js"></script>
         <script src="/js/controllers/CalcSaleryCtrl.js"></script>
         <script src="/js/controllers/LoginCtrl.js"></script>
         <script src="/js/controllers/headerCtrl.js"></script>
         <script src="/js/factories/LoginFactory.js"></script>
+        <script src="/js/factories/SaleryFactory.js"></script>
         <!-- endinjector -->
 
     </head>
